<?xml version="1.0"?>
<package>
  <name>kinco_motor_rs232</name>
  <version>0.0.3</version>
  <description>A catkin version of jy901 imu</description>

  <maintainer email="Samuel.xu1988@gmail.com">Xus</maintainer>
  <author>Shengdong Xu</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <export>
  </export>
</package>
